k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookshelf-mvp
  labels:
    name: bookshelf-mvp
